# Fae

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
core/: CMakeLists.txt
core/include/fae/: application.hpp  entity.hpp  event.hpp  fae.hpp  glad_context.hpp  mesh.hpp  renderer.hpp  shader.hpp  window.hpp
core/src/: application.cpp  entity.cpp  glad_context.cpp  logger.cpp  mesh.cpp  renderer.cpp  shader.cpp  window.cpp
demo/: CMakeLists.txt
demo/include/fae-demo/: triangle_entity.hpp
demo/src/: main.cpp  triangle_entity.cpp
fae/: CMakeLists.txt
fae-demo/: CMakeLists.txt
fae-demo/include/fae-demo/: root_entity.hpp  triangle_entity.hpp
fae-demo/src/: main.cpp  root_entity.cpp  triangle_entity.cpp
fae/include/fae/: application.hpp  entity.hpp  event.hpp  foo.hpp  index_buffer.hpp  logger.hpp  mesh.hpp  renderer.hpp  shader.hpp  vertex_buffer.hpp  window.hpp
fae/src/: application.cpp  entity.cpp  foo.cpp  index_buffer.cpp  logger.cpp  mesh.cpp  renderer.cpp  shader.cpp  vertex_buffer.cpp  window.cpp
linux-scripts/: clean
scripts/: clean  configure  full  run
scripts/linux/: build  build-and-run-demo  clean  configure  full  re-configure  run  run-demo  run-tests
scripts/windows/: build-and-run-demo.bat  build.bat  clean.bat  configure.bat  full.bat  re-configure.bat  run-demo.bat  run-tests.bat
tests/: CMakeLists.txt
tests/src/: main.cpp
windows-scripts/: build.bat  clean.bat  configure.bat  full.bat  run.bat
